# underway_rvdas

./: .gitignore  README.md  device_config.py  pyproject.toml  test_stream.py  underway_data_monitor.py
conf/: device.conf  device.conf.bak  device.serial.conf  dslog.ini  screen.config  ship.conf
database/: README  checkdb.py  data.json  datascreen.db  import-data.py  make-table.py  output-data.py
database/feeders/: armstrong.db  (+29 more)
output/: 1716304408.5456872-2024-05-21  1716304431.204948-2024-05-21  1716304532.1482642-2024-05-21  1716304736.1478288-2024-05-21  1716304760.824874-2024-05-21  1716304776.896065-2024-05-21  1716304890.779739-2024-05-21  1716304953.7170672-2024-05-21  1716305680.2629244-2024-05-21  1716384953.1493437-2024-05-22  1716385223.835426-2024-05-22  1716385273.1820173-2024-05-22  1716385293.4867911-2024-05-22  1716385380.2289984-2024-05-22  1716385410.6874697-2024-05-22  1716385526.8335187-2024-05-22  1716385561.7012153-2024-05-22  1716385953.7705736-2024-05-22  1716386005.975016-2024-05-22  1716386024.6482465-2024-05-22  1716386039.653083-2024-05-22  1716386055.7185936-2024-05-22  1716386087.4384973-2024-05-22  1716386113.7858558-2024-05-22  1716386143.792285-2024-05-22  1716386256.0953143-2024-05-22  1716386387.2395525-2024-05-22  1716386398.6412125-2024-05-22  1716386777.395316-2024-05-22
underway_rvdas/: underway_data_monitor.py
underway_rvdas_csv/: custom_function_transform.py  data_sim.sh  dotenv.template  normalize_lat_lon_transform.py  underway_rvdas_csv.py  underway_rvdas_csv.sh
utils/: ship_config.py  uninstall_openrvdas.sh
(+92 files in other folders)
