[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "underway_rvdas"
version = "0.2.1"
authors = [
  { name="Ben Foley", email="benjamin.foley@whoi.edu" },
]
description = "An implementation of OpenRVDAS for WHOI."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    openrvdas
]

[project.scripts]
underway_rvdas = "underway_rvdas.underway_data_monitor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/underway_rvdas"]
